# axhub

./: .gitattributes  .gitignore  .graphify_python  .tool-versions  .versionrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  QA_AXHUB_CLI_0.22.0_PLUGIN_1.5.0_2026-06-29.md  QA_AXHUB_LOCAL_CLI_PLUGIN_2026-06-30.md  README.md  THIRD-PARTY-NOTICES.md  TODOS.md  package.json  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.omc/: m1.5-verdict.md  m1.5-verdict.v2.md  prd.json  progress.txt
.plan/: 00-overview.md  01-phase-0-prerequisite.md  02-phase-1-foundation.md  03-phase-2-stateless.md  04-phase-3-security.md  05-phase-4-integration.md  10-source-mapping.md  90-risks-and-mitigations.md  91-test-strategy.md  92-decision-log.md  99-original-autoplan-review.md  Getting Started.md
.specify/: feature.json  init-options.json  integration.json
agents/: axhub-debugger.md  axhub-migrate-architect.md  axhub-migrate-critic.md  axhub-migrate-discoverer.md  axhub-migrate-planner.md  axhub-migrate-reviewer.md  axhub-reviewer.md  axhub-sdk-go-expert.md  axhub-sdk-java-expert.md  axhub-sdk-kotlin-expert.md  axhub-sdk-node-expert.md  axhub-sdk-python-expert.md  axhub-sdk-ruby-expert.md  axhub-shipper.md
commands/: apis.md  apps.md  deploy.md  doctor.md  help.md  login.md  logs.md  status.md  update.md  배포.md
crates/axhub-helpers/: Cargo.toml  build.rs
crates/axhub-helpers/assets/: AXHUB.md
crates/axhub-helpers/data/: catalog.json  cli-exit-contract.json
crates/axhub-helpers/rules/: PROVENANCE.md  data-contract-rules.json  data-contract-rules.schema.json
crates/axhub-helpers/src/: ast_validate.rs  atomic_jsonl.rs  audit.rs  audit_ledger.rs  autowire.rs  axhub_cli.rs  blocker_state.rs  bootstrap.rs  catalog.rs  cli_drift.rs  cli_envelope.rs  commit_gate.rs  config.rs  deploy_prep.rs  event_log.rs  grace.rs  hook_output.rs  hook_safety.rs  humanize.rs  init_resume.rs  karpathy_inject.rs  keychain.rs  keychain_windows.rs  lib.rs  list_deployments.rs  main.rs  mcp_config.rs  mcp_serve.rs  messages.rs  migrate_data_verify.rs  migrate_plan.rs  migrate_planning.rs  observability.rs  onboarding_detect.rs  orphan_stub.rs  plugin_update.rs  preflight.rs  quality_gate.rs  quality_state.rs  recovery_scan.rs  (+20 more)
crates/axhub-helpers/src/cli/: mod.rs
crates/axhub-helpers/src/cli/args/: mod.rs
crates/axhub-helpers/src/consent/: decision.rs  jwt.rs  key.rs  mod.rs  parser.rs  schema.rs
crates/axhub-helpers/src/diagnose/: fix.rs  hitl.rs  hypothesis.rs  instrument.rs  learning.rs  loop_builder.rs  mod.rs  postmortem.rs  preflight.rs  probe.rs  recurrence.rs  signal.rs  state.rs
crates/axhub-helpers/src/diagnose/probe/: env_var.rs  loop_shadow.rs  manifest.rs
crates/axhub-helpers/templates/: dashboard.html  mode-a-ts.tmpl  mode-b-go.tmpl  mode-b-python.tmpl  mode-b-shell.tmpl  mode-b-ts.tmpl
crates/axhub-helpers/tests/: atomic_jsonl_test.rs  audit_e2e.rs  autowire_scope_auto_test.rs  bootstrap_coverage.rs  bootstrap_dependency_plan_test.rs  ci_coverage_gate.rs  clap_failopen_test.rs  clap_usage_exit_test.rs  classify_exit_suggest_test.rs  cli_e2e.rs  data_layer_cli.rs  deploy_prep_test.rs  diagnose_2am_friday.rs  diagnose_layering_test.rs  doctor_size_test.rs  event_log_test.rs  hook_safety_cli.rs  init_scaffold_resume_test.rs  linux_keychain_live.rs  macos_keychain_live.rs  mcp_serve_e2e.rs  migrate_guard_cli.rs  migrate_sdk_installed_cli.rs  phase26_quality_cli.rs  phase_parity.md  phase_parity.rs  post_install_test.rs  preflight_parallel_test.rs  recovery_scan_test.rs  redact_parity.md  repair_path.rs  routing_axhub_foreign_conflict_ask_ac6.rs  routing_combination_matrix_ac14.rs  routing_decision_foreign_keyword_yield.rs  routing_double_surface_bounded_ac19.rs  routing_explicit_keyword_non_marker_ac2.rs  routing_grace_once_per_project_ac11.rs  routing_lazy_auth_explicit_ac9.rs  routing_lazy_auth_failure_ac10.rs  routing_marker_error_authed_ac17.rs  (+13 more)
crates/axhub-helpers/tests/fixtures/ast-validate/: axhub.yaml
crates/axhub-helpers/tests/fixtures/ast-validate/go/: bad.go  good.go
crates/axhub-helpers/tests/fixtures/ast-validate/java/: bad.java  good.java
crates/axhub-helpers/tests/fixtures/ast-validate/kotlin/: bad.kt  good.kt
crates/axhub-helpers/tests/fixtures/ast-validate/node/: bad.ts  bad.tsx  good.ts  good.tsx
crates/axhub-helpers/tests/fixtures/ast-validate/python/: bad.py  good.py
crates/axhub-helpers/tests/fixtures/ast-validate/ruby/: bad.rb  good.rb
crates/axhub-helpers/tests/fixtures/bootstrap/: apps_create.422.subdomain_collision.json  apps_create.5xx.json  apps_create.missing_defaults.json  apps_create.success.v1.json
crates/axhub-helpers/tests/fixtures/consent-bindings/: apps_create.from_file.json  apps_create.interactive.json  deploy_create.pending.json  env_set.json  helper_synthesized.deploy_create.json
crates/axhub-helpers/tests/fixtures/site-scan/go/: bad.go  good.go
crates/axhub-helpers/tests/fixtures/site-scan/java/: bad.java  good.java
crates/axhub-helpers/tests/fixtures/site-scan/kotlin/: bad.kt  good.kt
crates/axhub-helpers/tests/fixtures/site-scan/node/: bad.ts  good.ts
crates/axhub-helpers/tests/fixtures/site-scan/python/: bad.py  good.py
crates/axhub-helpers/tests/fixtures/site-scan/ruby/: bad.rb  good.rb
docs/: HOOKS.md  MANUAL-POSTCOMMIT.md  MIGRATION_v0.6_to_v1.0.md  MIGRATION_v0.9_helper-cli-boundary.md  PRODUCT_CONTRACT.md  RELEASE.md  architecture.ko.md  audit-privacy-contract.md  baseline-measurement.md  bun-api-inventory.md  migrate-rust.md  migration-gate.md  org-admin-rollout.ko.md  plugin-developer-guide.md  routing-tune.md  routing.md  sessionstart-contract.md  settings-merge.md  troubleshooting.ko.md  vibe-coder-quickstart.ko.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs
hooks/: _helpers.ts  auto-update-prompt.md  axhub-helpers.sh  hooks.json  post-commit  post-tool-verify-deploy-artifacts.ts  session-start-autowire.ps1  session-start-autowire.sh  session-start.ps1  session-start.sh  token-freshness-gate.sh
scripts/: benchmark-hooks.ts  (+43 more)
(+706 files in other folders)
