[workspace]
members = ["crates/axhub-helpers"]
resolver = "2"

[workspace.package]
version = "0.9.11"
edition = "2021"
rust-version = "1.83"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
getrandom = "0.2"
hmac = "0.12"
jsonwebtoken = "9"
libc = "0.2"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros", "io-util", "io-std", "process", "sync"] }
crossterm = "0.28"
shlex = "1.3"
