[package]
name = "axhub-helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
getrandom.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
libc.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "1"
x509-parser = "0.16"
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true

[build-dependencies]
axhub-codegen = { path = "../axhub-codegen" }
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
