[package]
name = "axhub-helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
fslock = "0.2"
base64.workspace = true
chrono.workspace = true
clap.workspace = true
getrandom.workspace = true
hmac.workspace = true
libc.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
tokio.workspace = true
crossterm.workspace = true
shlex.workspace = true
ureq = "3.2.1"

[build-dependencies]
anyhow.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
